--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-nav></app-nav>
+<div class="container-fluid gedf-wrapper">
+<app-new-feed></app-new-feed>
+</div>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
