--- a/src/main/frontend/src/app/nav/nav.component.html
+++ b/src/main/frontend/src/app/nav/nav.component.html
@@ -1,24 +1,99 @@
 <header>
-  <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top simp-nav">
+    <div class="wrapper">
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+      aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <a class="navbar-brand flex-grow-1" routerLink='/'>Simplante</a>
+      <form class="form-inline top-form">
+        <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+        <button class="btn btn-secondary" type="submit"><i class="ion-search"></i></button>
+      </form>
+      <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+              <a class="nav-link" href="#"><img class="profil" src="../../assets/img/avatars/profil.png"width="24" height="24" style="border-radius: 50%; margin-right:2px" alt="profile-picture">Name<span class="sr-only"></span></a>
+            </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Simplante<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><i class="ion-plus-circled"></i></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">Dropdown</a>
+          <div class="dropdown-menu" aria-labelledby="dropdown01">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+    </div>
+  </nav>
+  <!-- <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white sp-nav gradient">
     <div class="container">
-      <a class="navbar-brand logo flex-grow-1" routerLink='/home'>Simplante</a>
+      <a class="navbar-brand logo flex-grow-1" routerLink='/'>Simplante</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"><span class="sr-only">Toggle
           navigation</span><span class="navbar-toggler-icon"></span></button>
-      <!-- <div class="flex-grow-1 d-flex justify-content-center">
+      <div class="flex-grow-1 d-flex justify-content-center">
         <form class="form-inline my-2 my-lg-0 flex-nowrap">
           <input class="form-control mr-sm-2" [(ngModel)]="motCle" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" (click)="SimplantesComponent.chercher()">Q</button>
         </form>
-      </div> -->
+      </div>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="nav navbar-nav ml-auto">
-          <li class="nav-item" role="presentation"><a class="nav-link" routerLinkActive="active" routerLink="/home">Home</a></li>
-          <li class="nav-item" role="presentation"><a class="nav-link" routerLinkActive="active" routerLink='/simplante'>Les
+          <li class="nav-item" role="home"><a class="nav-link" routerLinkActive="isActive" routerLink="/">Home</a></li>
+          <li class="nav-item" role="simplante"><a class="nav-link" routerLinkActive="isActive" routerLink='/simplante'>Les
               Simplantes</a></li>
-          <li class="nav-item" role="presentation"><a class="nav-link" routerLinkActive="active" routerLink='/addSimplante'>Ajouter
+          <li class="nav-item" role="ajouterSimplante"><a class="nav-link" routerLinkActive="isActive" routerLink='/ajouter-simplante'>Ajouter
               Simplantes</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Admin
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Gestion des Postes</a>
+              <a class="dropdown-item" href="#">Gestion Utilisateurs</a>
+              <a class="dropdown-item" href="#">Gestion des Commentaires</a>
+              <a class="dropdown-item" href="#">Gestion des Catégories</a>
+
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Déconnexion</a>
+            </div>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">Login</a>
+                <ul class="dropdown-menu dropdown-menu-right mt-2">
+                   <li class="px-3 py-2">
+                       <form class="form" role="form">
+                            <div class="form-group">
+                                <input id="emailInput" placeholder="Email" class="form-control form-control-sm" type="text" required="">
+                            </div>
+                            <div class="form-group">
+                                <input id="passwordInput" placeholder="Password" class="form-control form-control-sm" type="text" required="">
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary btn-block">Login</button>
+                            </div>
+                            <div class="form-group text-center">
+                                <small><a href="#" data-toggle="modal" data-target="#modalPassword">Forgot password?</a></small>
+                            </div>
+                        </form>
+                    </li>
+                </ul>
+            </li>
         </ul>
       </div>
     </div>
-  </nav>
+  </nav> -->
 </header>
