Add user dashboard and angular interceptor

--- a/src/main/frontend/src/app/admin-dashboard/admin-categories/admin-categories.component.html
+++ b/src/main/frontend/src/app/admin-dashboard/admin-categories/admin-categories.component.html
@@ -69,7 +69,7 @@
         </tbody>
       </table>
     </div>
-    <div class="card-footer">
+    <div class="card-footer" *ngIf="mode=='list'" >
         <div class="row">
           <div class="col col-xs-4">Page 1</div>
         </div>
