--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -1,12 +1,7 @@
 <app-nav></app-nav>
+<main>
 <div class="container-fluid gedf-wrapper">
-    <div class="row">
-        <div class="col-md-4">
-            <app-sidebar></app-sidebar>
-        </div>
-        <div class="col-md-8 gedf-main">
-            <router-outlet></router-outlet>
-        </div>
-    </div>
+<router-outlet></router-outlet>
 </div>
+</main>
 <app-footer></app-footer>
