--- a/src/main/frontend/src/app/create-post/create-post.component.html
+++ b/src/main/frontend/src/app/create-post/create-post.component.html
@@ -20,15 +20,15 @@
             <div class="tab-content" id="myTabContent">
                 <div aria-labelledby="posts-tab" class="tab-pane fade show active" id="posts" role="tabpanel">
                     <div class="form-group">
-                        <label class="sr-only" for="message">title</label>
+                        <label class="sr-only" for="title">title</label>
                         <input #title="ngModel" [(ngModel)]="simplante.title" class="form-control" maxlength="100"
                                minlength="5" name="title"
-                               placeholder="Title" required type="text">
+                               placeholder="Titre" required type="text">
                     </div>
                     <div class="form-group">
-                        <label class="sr-only" for="message">post</label>
+                        <label class="sr-only" for="post">post</label>
                         <textarea #body="ngModel" [(ngModel)]="simplante.body" class="form-control" id="message"
-                                  name="body" placeholder="What are you thinking?" required
+                                  name="body" placeholder="Laissez-nous savoir ce que vous pensez. " required
                                   rows="3"></textarea>
                     </div>
 
@@ -45,7 +45,7 @@
             </div>
             <div class="btn-toolbar justify-content-between">
                 <div class="btn-group">
-                    <button [disabled]="!simplanteForm.form.valid" class="btn btn-primary" type="submit">share</button>
+                    <button [disabled]="!simplanteForm.form.valid" class="btn btn-primary" type="submit">Partager</button>
                 </div>
                 <div class="btn-group">
                     <select [(ngModel)]="simplante.categoryId" name="category" required>
