--- a/src/main/frontend/src/app/nav/nav.component.html
+++ b/src/main/frontend/src/app/nav/nav.component.html
@@ -9,7 +9,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 
-                <a class="navbar-brand flex-grow-1" routerLink='/simplante'>Simplante</a>
+                <a class="navbar-brand flex-grow-1" routerLink='/'>Simplante</a>
                 
                 <!--Barre de Recherche-->
                 <form class="form-inline top-form">
@@ -27,8 +27,9 @@
                             width="24">{{user()}}<span class="sr-only"></span></a>
 
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a *ngIf="isUser()" class="dropdown-item" href="#">Gestion des Simplantes</a>
-                            <a *ngIf="isAdmin()" class="dropdown-item" href="#">Gestion Utilisateurs</a>
+                            <a *ngIf="isAdmin()" class="dropdown-item" routerLink='/adminSimplantes'>Gestion des Simplantes</a>
+                            <a *ngIf="isUser()" class="dropdown-item" [routerLink]="['/user',user(),'simplante']">Gestion de mes Simplantes</a>
+                            <a *ngIf="isAdmin()" class="dropdown-item" routerLink='/adminSimplantes'>Gestion Utilisateurs</a>
                             <a *ngIf="isAdmin()" class="dropdown-item" href="#">Gestion des Commentaires</a>
                             <a *ngIf="isAdmin()" class="dropdown-item" routerLink='/adminCategories'>Gestion des Catégories</a>
                             <a class="dropdown-item" href="#">Parametre</a>
