--- a/src/main/frontend/src/app/sidebar/sidebar.component.html
+++ b/src/main/frontend/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="card ">
     <div class="card-body">
-        <div class="h5">@LeeCross</div>
+        <div class="h5">@{{user()}}</div>
         <div class="h7 text-muted">Fullname : Miracles Lee Cross</div>
     </div>
 </div>
