--- a/src/main/frontend/src/app/admin-dashboard/admin-categories/admin-categories.component.html
+++ b/src/main/frontend/src/app/admin-dashboard/admin-categories/admin-categories.component.html
@@ -1,11 +1,11 @@
-<div class="panel panel-default panel-table">
+<div class="panel panel-default panel-table mx-auto col-xs-12 col-md-10">
   <div class="card-header bg-gradient">
     <div class="row">
       <div class="col col-xs-6">
         <h4 class="panel-title text-white">Gestion des catégories</h4>
       </div>
       <div class="col col-xs-6 text-right">
-        <button type="button" class="btn btn-sm btn-create" (click)="newCategory()"><i class="fas fa-plus"></i></button>
+        <button type="button" class="btn btn-sm btn-create text-white" (click)="newCategory()"><i class="fas fa-plus"></i></button>
       </div>
     </div>
   </div>
@@ -19,7 +19,7 @@
             <input type="text" class="form-control" ngModel name="name" required>
           </div>
           <div class="col-sm-3">
-              <button class="btn btn-primary mr-2" type="submit">Ajouter</button>
+              <button [disabled]="!formCategory.form.valid" class="btn btn-primary mr-2" type="submit">Ajouter</button>
               <button class="btn btn-secondary" (click)="mode='list'" >Annuler</button>
             </div>
         </form>
@@ -36,7 +36,7 @@
                 <input type="text" class="form-control" name="name" ngModel [(ngModel)]="currentCategory.name" required>
               </div>
               <div class="col-sm-3">
-                  <button class="btn btn-primary mr-2" type="submit">Ajouter</button>
+                  <button [disabled]="!formCategory.form.valid" class="btn btn-primary mr-2" type="submit">Ajouter</button>
                   <button class="btn btn-secondary" (click)="mode='list'" >Annuler</button>
                 </div>
             </form>
