--- a/src/main/frontend/src/app/admin-dashboard/admin-simplantes/admin-simplantes.component.html
+++ b/src/main/frontend/src/app/admin-dashboard/admin-simplantes/admin-simplantes.component.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default panel-table mx-auto col-md-10">
+<div class="panel panel-default panel-table mx-auto col-xs-12 col-md-10">
   <div class="card-header bg-gradient">
     <div class="row">
       <div class="col col-xs-6">
@@ -21,7 +21,7 @@
         </div>
         <div class="form-group col-xs-6">
           <label class="sr-only" for="body">post</label>
-          <textarea ngModel class="form-control" name="body" placeholder="Laissez-nous savoir ce que vous pensez. "
+          <textarea ngModel class="form-control" name="body" placeholder="Laissez-nous savoir ce que vous pensez."
             required rows="3"></textarea>
         </div>
         <div class="btn-group">
