--- a/src/main/frontend/src/app/admin-dashboard/admin-users/admin-users.component.html
+++ b/src/main/frontend/src/app/admin-dashboard/admin-users/admin-users.component.html
@@ -1,3 +1,153 @@
-<p>
-  admin-users works!
-</p>
+<div class="panel panel-default panel-table mx-auto col-xs-12 col-md-10">
+  <div class="card-header bg-gradient">
+    <div class="row">
+      <div class="col col-xs-6">
+        <h4 class="panel-title text-white">Gestion des utilisateurs</h4>
+      </div>
+      <div class="col col-xs-6 text-right">
+        <button type="button" class="btn btn-sm btn-create text-white" (click)="newUser()"><i class="fas fa-plus"></i></button>
+      </div>
+    </div>
+  </div>
+
+  <!--Formulaire d'ajout-->
+  <div class="panel-body">
+    <div *ngIf="mode =='new-user'">
+        <form class="form mt-4" #form="ngForm" (ngSubmit)="saveUser(form.value)">
+          
+            <div class="form-group input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
+                </div>
+                <input name="email" ngModel class="form-control" placeholder="Email" type="email" required>
+              </div>
+
+            <div class="form-group input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                </div>
+                <input name="username" ngModel class="form-control" placeholder="Pseudo" type="text" required>
+              </div>
+
+          <div class="form-group input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text"> <i class="fa fa-user"></i></span>
+              </div>
+              <input name="lastName" ngModel class="form-control" placeholder="Nom" type="text" required>
+            </div>
+
+            <div class="form-group input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                </div>
+                <input name="firstName" ngModel class="form-control" placeholder="Prénom" type="text" required>
+              </div>
+              <div class="form-group input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                  </div>
+                  <input name="password" ngModel class="form-control" placeholder="Mot de passe" type="password" required>
+                </div>
+                <div class="form-group input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                  </div>
+                  <input name="rePassword" ngModel class="form-control" placeholder="Confirmer mot de passe" type="password" required>
+                </div>
+          <div class="col-sm-3 mx-auto">
+            <button [disabled]="!form.form.valid" class="btn btn-primary mr-2" type="submit">Ajouter</button>
+            <button class="btn btn-secondary" (click)="mode='list'">Annuler</button>
+          </div>
+        </form>
+      
+    </div>
+  </div>
+
+    <!--Formulaire d'edit-->
+    <div class="panel-body">
+        <div *ngIf="mode =='edit-user'">
+            <form class="mt-4" #form="ngForm" (ngSubmit)="editUser(form.value)">
+                
+              <div class="form-group input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
+                    </div>
+                    <input name="email" class="form-control" placeholder="Email" type="email" [(ngModel)]="currentUser.email" required>
+                  </div>
+                  <div class="form-group input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                      </div>
+                      <input name="username" class="form-control" placeholder="Pseudo" type="text" [(ngModel)]="currentUser.username" required>
+                    </div>
+      
+                <div class="form-group input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"> <i class="fa fa-user"></i></span>
+                    </div>
+                    <input name="lastName" class="form-control" placeholder="Nom" type="text" [(ngModel)]="currentUser.lastName" required>
+                  </div>
+      
+                  <div class="form-group input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                      </div>
+                      <input name="firstName" class="form-control" placeholder="Prénom" type="text" [(ngModel)]="currentUser.firstName" required>
+                    </div>
+
+              <div class="col-sm-3">
+                  <button [disabled]="!form.form.valid" class="btn btn-primary mr-2" type="submit">Ajouter</button>
+                  <button class="btn btn-secondary" (click)="mode='list'" >Annuler</button>
+                </div>
+            </form>
+          
+        </div>
+      </div>
+
+    <div class="panel-body" *ngIf="mode =='list'">
+      <table class="table table-striped table-bordered table-list" *ngIf="users">
+        <thead>
+          <tr>
+            <th><em class="fa fa-cog"></em></th>
+            <th>Email</th>
+            <th>Pseudo</th>
+            <th>Nom</th>
+            <th>Prénom</th>
+            <th>Enregister le</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let user of users">
+            <td align="center">
+              <button class="btn" (click)="GetUserById(user.id)">
+                <i class="fas fa-pencil-alt"></i>
+              </button>
+              <button class="btn" (click)="deleteUser(user.id)">
+                <i class="fas fa-trash-alt"></i>
+              </button>
+            </td>
+            <td>
+              {{user.email}}
+            </td>
+            <td>
+                {{user.username}}
+              </td>
+            <td>
+              {{user.lastName}}
+            </td>
+            <td>
+              {{user.firstName}}
+            </td>
+            <td>
+              {{user.registerDate | date:'dd/MM/y à HH:mm'}}
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="card-footer" *ngIf="mode=='list'" >
+        <div class="row">
+          <div class="col col-xs-4">Page 1</div>
+        </div>
+      </div>
+  </div>
