--- a/src/main/frontend/src/app/app.component.html
+++ b/src/main/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 <main>
-<div class="container-fluid gedf-wrapper">
+<div class="container-fluid gedf-wrapper vh-100">
 <router-outlet></router-outlet>
 </div>
 </main>
