--- a/src/main/frontend/src/app/sidebar/sidebar.component.html
+++ b/src/main/frontend/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="card ">
-    <div class="card-body">
+    <div class="card-body" *ngIf="isAuthenticated()">
         <div class="h5">@{{user()}}</div>
         <div class="h7 text-muted">Fullname : Miracles Lee Cross</div>
     </div>
