--- a/src/main/frontend/src/app/create-post/create-post.component.html
+++ b/src/main/frontend/src/app/create-post/create-post.component.html
@@ -6,15 +6,12 @@
     <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
             <li class="nav-item">
-                <a aria-controls="posts" aria-selected="true" class="nav-link active" data-toggle="tab" href="#posts"
-                   id="posts-tab"
-                   ="tab">Make
-                    a publication</a>
+                <a class="nav-link active" id="posts-tab" data-toggle="tab" href="#posts" role="tab"
+                    aria-controls="posts" aria-selected="true">Publier</a>
             </li>
             <li class="nav-item">
-                <a aria-controls="images" aria-selected="false" class="nav-link" data-toggle="tab" href="#images"
-                   id="images-tab"
-                   ="tab">Images</a>
+                <a class="nav-link" id="images-tab" data-toggle="tab" role="tab" aria-controls="images"
+                    aria-selected="false" href="#images">Images</a>
             </li>
         </ul>
     </div>
@@ -25,14 +22,13 @@
                     <div class="form-group">
                         <label class="sr-only" for="title">title</label>
                         <input #title="ngModel" [(ngModel)]="simplante.title" class="form-control" maxlength="100"
-                               minlength="5" name="title"
-                               placeholder="Titre" required type="text">
+                            minlength="5" name="title" placeholder="Titre" required type="text">
                     </div>
                     <div class="form-group">
                         <label class="sr-only" for="post">post</label>
                         <textarea #body="ngModel" [(ngModel)]="simplante.body" class="form-control" id="message"
-                        name="body" placeholder="Laissez-nous savoir ce que vous pensez. " required
-                                  rows="3"></textarea>
+                            name="body" placeholder="Laissez-nous savoir ce que vous pensez. " required
+                            rows="3"></textarea>
                     </div>
 
                 </div>
@@ -48,11 +44,12 @@
             </div>
             <div class="btn-toolbar justify-content-between">
                 <div class="btn-group">
-                    <button [disabled]="!simplanteForm.form.valid" class="btn btn-primary" type="submit">Partager</button>
+                    <button [disabled]="!simplanteForm.form.valid" class="btn btn-primary"
+                        type="submit">Partager</button>
                 </div>
                 <div class="btn-group">
                     <select [(ngModel)]="simplante.categoryId" name="category" required>
-                        <option [ngValue]="undefined" hidden>Select one category</option>
+                        <option [ngValue]="undefined" hidden>Catégories</option>
                         <option *ngFor="let cat of categories" [ngValue]='cat.id'>{{cat.name}}</option>
                     </select>
                 </div>
