--- a/src/main/frontend/src/app/one-simplante/one-simplante.component.html
+++ b/src/main/frontend/src/app/one-simplante/one-simplante.component.html
@@ -39,6 +39,6 @@
             </div>
         </div>
     
-           <a (click)="goBack()" class="btn btn-primary text-white btn-sm" role="button"
+           <a (click)="goBack()" class="btn btn-primary text-white btn-sm" roles="button"
            style="cursor: pointer;">Retour</a>
             </section>
