--- a/src/main/frontend/src/app/create-post/create-post.component.html
+++ b/src/main/frontend/src/app/create-post/create-post.component.html
@@ -1,16 +1,13 @@
 <!--- \\\\\\\Post-->
-<div class="text-primary mb-5" *ngIf="!isAuthenticated()">
-    <h2>Les Simplantes:</h2>
-</div>
 <div class="card gedf-card" *ngIf="isAuthenticated()">
     <div class="card-header">
-        <ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
+        <ul class="nav nav-tabs card-header-tabs" id="myTab" roles="tablist">
             <li class="nav-item">
-                <a class="nav-link active" id="posts-tab" data-toggle="tab" href="#posts" role="tab"
+                <a class="nav-link active" id="posts-tab" data-toggle="tab" href="#posts" roles="tab"
                     aria-controls="posts" aria-selected="true">Publier</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="images-tab" data-toggle="tab" role="tab" aria-controls="images"
+                <a class="nav-link" id="images-tab" data-toggle="tab" roles="tab" aria-controls="images"
                     aria-selected="false" href="#images">Images</a>
             </li>
         </ul>
@@ -18,7 +15,7 @@
     <form #simplanteForm="ngForm" (ngSubmit)="saveSimplante()">
         <div class="card-body">
             <div class="tab-content" id="myTabContent">
-                <div aria-labelledby="posts-tab" class="tab-pane fade show active" id="posts" role="tabpanel">
+                <div aria-labelledby="posts-tab" class="tab-pane fade show active" id="posts" roles="tabpanel">
                     <div class="form-group">
                         <label class="sr-only" for="title">title</label>
                         <input #title="ngModel" [(ngModel)]="simplante.title" class="form-control" maxlength="100"
@@ -32,7 +29,7 @@
                     </div>
 
                 </div>
-                <div aria-labelledby="images-tab" class="tab-pane fade" id="images" role="tabpanel">
+                <div aria-labelledby="images-tab" class="tab-pane fade" id="images" roles="tabpanel">
                     <div class="form-group">
                         <div class="custom-file">
                             <input class="custom-file-input" id="customFile" type="file">
